// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`iNav decoder parity > decodeCommonPgList (four ids) 1`] = `
{
  "pgIds": [
    1,
    16,
    256,
    4096,
  ],
}
`;

exports[`iNav decoder parity > decodeCommonSetting 1`] = `
{
  "raw": [
    222,
    173,
    190,
    239,
  ],
}
`;

exports[`iNav decoder parity > decodeCommonSettingInfo 1`] = `
{
  "absoluteMax": 200,
  "absoluteMin": -200,
  "flags": 1,
  "max": 100,
  "min": -100,
  "mode": 1,
  "pgId": 291,
  "profileCount": 3,
  "profileIdx": 1,
  "type": 2,
}
`;

exports[`iNav decoder parity > decodeMspAdsbVehicleList (one vehicle) 1`] = `
[
  {
    "alt": 774000000,
    "callsign": "ABCD",
    "emitterType": 64,
    "heading": 5820.8,
    "icao": 0,
    "lastSeenMs": 117964822,
    "lat": 1.1259375,
    "lon": 13.5,
    "ttlSec": 226,
  },
]
`;

exports[`iNav decoder parity > decodeMspCommonMotorMixer (mixed occupancy) 1`] = `
[
  {
    "pitch": 1,
    "roll": 1,
    "throttle": 1,
    "yaw": -1,
  },
  {
    "pitch": -1,
    "roll": -1,
    "throttle": 1,
    "yaw": 1,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavAirSpeed 1`] = `
{
  "airSpeedCmS": 1750,
}
`;

exports[`iNav decoder parity > decodeMspINavAnalog 1`] = `
{
  "amperage": 3276.8,
  "batteryPercent": 11,
  "flags": 1,
  "mAhDrawn": 98304850,
  "mWhDrawn": 3091922944,
  "powerMw": 44433408,
  "rssiPct": 12345,
  "voltage": 12.6,
}
`;

exports[`iNav decoder parity > decodeMspINavBatteryConfig 1`] = `
{
  "capacityCriticalMah": 1751078477,
  "capacityMah": 538381829,
  "capacityUnit": 113,
  "capacityWarningMah": 1144730153,
  "cellDetect": 140,
  "cellMax": 45223,
  "cellMin": 40597,
  "cellWarning": 49849,
  "cells": 131,
  "currentOffset": 59101,
  "currentScale": 54475,
  "voltageSource": 122,
}
`;

exports[`iNav decoder parity > decodeMspINavEzTune 1`] = `
{
  "aggressiveness": 90,
  "axisRatio": 50,
  "damping": 70,
  "enabled": true,
  "expo": 110,
  "filterHz": 120,
  "rate": 100,
  "response": 60,
  "snappiness": 120,
  "stability": 80,
}
`;

exports[`iNav decoder parity > decodeMspINavFwApproach (two entries) 1`] = `
[
  {
    "approachAlt": 5000,
    "approachDirection": 2,
    "isSeaLevelRef": true,
    "landAlt": 1500,
    "landHeading1": 90,
    "landHeading2": -90,
    "number": 1,
  },
  {
    "approachAlt": 5000,
    "approachDirection": 2,
    "isSeaLevelRef": true,
    "landAlt": 1500,
    "landHeading1": 90,
    "landHeading2": -90,
    "number": 2,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavGeozone 1`] = `
{
  "enabled": true,
  "fenceAction": 1,
  "isSeaLevelRef": true,
  "maxAlt": 50000,
  "minAlt": 10000,
  "number": 2,
  "shape": 1,
  "type": 1,
  "vertexCount": 5,
}
`;

exports[`iNav decoder parity > decodeMspINavGeozoneVertex 1`] = `
{
  "geozoneId": 2,
  "lat": 13.5,
  "lon": 77.4,
  "vertexIdx": 1,
}
`;

exports[`iNav decoder parity > decodeMspINavGvarStatus 1`] = `
{
  "values": [
    -500,
    -400,
    -300,
    -200,
    -100,
    0,
    100,
    200,
    300,
    400,
    500,
    600,
    700,
    800,
    900,
    1000,
  ],
}
`;

exports[`iNav decoder parity > decodeMspINavLogicConditions (two rules) 1`] = `
[
  {
    "activatorId": 0,
    "enabled": true,
    "flags": 0,
    "operandAType": 2,
    "operandAValue": 1000,
    "operandBType": 3,
    "operandBValue": -500,
    "operation": 5,
  },
  {
    "activatorId": 0,
    "enabled": true,
    "flags": 0,
    "operandAType": 2,
    "operandAValue": 1000,
    "operandBType": 3,
    "operandBValue": -500,
    "operation": 5,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavLogicConditionsStatus (three rules) 1`] = `
[
  {
    "id": 0,
    "value": 10,
  },
  {
    "id": 1,
    "value": -20,
  },
  {
    "id": 2,
    "value": 30,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavMcBraking 1`] = `
{
  "bankAngle": 45,
  "boostDisengage": 250,
  "boostFactor": 30,
  "boostSpeedThreshold": 150,
  "boostTimeout": 2000,
  "disengageSpeed": 200,
  "speedThreshold": 100,
  "timeout": 5000,
}
`;

exports[`iNav decoder parity > decodeMspINavMisc 1`] = `
{
  "cellMax": 140,
  "cellMin": 133,
  "cellWarning": 147,
  "failsafeThrottle": 16184,
  "gpsBaudrateIdx": 77,
  "gpsProvider": 70,
  "gpsUbxSbas": 84,
  "magDeclination": 30576,
  "maxthrottle": 8988,
  "midrc": 1792,
  "mincommand": 12586,
  "minthrottle": 5390,
  "multiwiiCurrentOutput": 91,
  "placeholder": 105,
  "rssiChannel": 98,
  "voltageScale": 126,
}
`;

exports[`iNav decoder parity > decodeMspINavMisc2 1`] = `
{
  "flags": 0,
  "flyTime": 1296185132,
  "lastArmTime": 2037277528,
  "onTime": 555092736,
  "totalArmTime": 2778369924,
}
`;

exports[`iNav decoder parity > decodeMspINavMixer 1`] = `
{
  "appliedMixerPreset": 3338,
  "hasFlaps": true,
  "motorCount": 16,
  "platformType": 1,
  "servoCount": 19,
  "yawMotorsReversed": true,
}
`;

exports[`iNav decoder parity > decodeMspINavNavConfigLegacy 1`] = `
{
  "landSlowdownMaxAlt": 50873,
  "landSlowdownMinAlt": 44191,
  "maxClimbRate": 24145,
  "maxManualClimbRate": 30827,
  "maxManualSpeed": 37509,
  "maxNavAltitude": 706547715,
  "maxNavSpeed": 17463,
  "navEmergencyLandingSpeed": 57555,
  "navExtraArming": 33,
  "navMinRthDistance": 64237,
  "navOverclimbAngle": 7,
  "useMidThrottleForAlthold": true,
}
`;

exports[`iNav decoder parity > decodeMspINavOsdAlarms 1`] = `
{
  "adsbDistanceAlert": 5000,
  "adsbDistanceWarning": 10000,
  "baroTempMax": 140,
  "baroTempMin": -40,
  "current": 40,
  "distance": 5000,
  "flyMinutes": 600,
  "gforce": 250,
  "gforceAxisMax": 500,
  "gforceAxisMin": -500,
  "imuTempMax": 150,
  "imuTempMin": -50,
  "maxAltitude": 300,
  "maxNegAltitude": 100,
  "rssi": 100,
}
`;

exports[`iNav decoder parity > decodeMspINavOsdLayoutsHeader 1`] = `
{
  "itemCount": 80,
  "layoutCount": 4,
  "variant": 2,
}
`;

exports[`iNav decoder parity > decodeMspINavOsdPreferences 1`] = `
{
  "adsbWarningStyle": 10,
  "ahiReverseRoll": 3,
  "crosshairsStyle": 4,
  "leftSidebarScroll": 5,
  "mainVoltageDecimals": 2,
  "rightSidebarScroll": 6,
  "sidebarScrollArrows": 7,
  "statsEnergyUnit": 9,
  "units": 8,
  "videoSystem": 1,
}
`;

exports[`iNav decoder parity > decodeMspINavOutputMappingExt2 (three entries) 1`] = `
[
  {
    "specialLabels": 16,
    "timerId": 0,
    "usageFlags": 1,
  },
  {
    "specialLabels": 32,
    "timerId": 1,
    "usageFlags": 2,
  },
  {
    "specialLabels": 64,
    "timerId": 2,
    "usageFlags": 4,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavPid (four axes) 1`] = `
[
  {
    "D": 25,
    "FF": 10,
    "I": 30,
    "P": 40,
    "axis": 0,
  },
  {
    "D": 22,
    "FF": 8,
    "I": 28,
    "P": 35,
    "axis": 1,
  },
  {
    "D": 20,
    "FF": 6,
    "I": 26,
    "P": 30,
    "axis": 2,
  },
  {
    "D": 10,
    "FF": 4,
    "I": 15,
    "P": 20,
    "axis": 3,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavProgrammingPid (one rule) 1`] = `
[
  {
    "enabled": true,
    "gains": {
      "D": 30,
      "FF": 20,
      "I": 40,
      "P": 50,
    },
    "measurementType": 1,
    "measurementValue": 500,
    "setpointType": 0,
    "setpointValue": 1000,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavProgrammingPidStatus (two rules) 1`] = `
[
  {
    "id": 0,
    "output": 500,
  },
  {
    "id": 1,
    "output": -750,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavRateDynamics 1`] = `
{
  "correctionPitch": 50,
  "correctionRoll": 40,
  "correctionYaw": 60,
  "sensitivityPitch": 20,
  "sensitivityRoll": 10,
  "sensitivityYaw": 30,
  "weightPitch": 80,
  "weightRoll": 70,
  "weightYaw": 90,
}
`;

exports[`iNav decoder parity > decodeMspINavRateProfile 1`] = `
{
  "dynamicThrottlePid": 13,
  "ratePitch": 53,
  "rateRoll": 48,
  "rateYaw": 58,
  "rcExpoPitch": 38,
  "rcExpoRoll": 33,
  "rcExpoYaw": 43,
  "rcRatePitch": 23,
  "rcRateRoll": 18,
  "rcRateYaw": 28,
  "throttleExpo": 8,
  "throttleMid": 3,
}
`;

exports[`iNav decoder parity > decodeMspINavSafehome 1`] = `
{
  "enabled": true,
  "index": 2,
  "lat": 13.5,
  "lon": 77.4,
}
`;

exports[`iNav decoder parity > decodeMspINavServoConfig (two servos) 1`] = `
[
  {
    "flags": 1,
    "forwardFromChannel": 3,
    "max": 2000,
    "middle": 1500,
    "min": 1000,
    "rate": 100,
    "reversedInputSources": 10,
  },
  {
    "flags": 1,
    "forwardFromChannel": 3,
    "max": 2000,
    "middle": 1500,
    "min": 1000,
    "rate": 100,
    "reversedInputSources": 10,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavServoMixer (two rules) 1`] = `
[
  {
    "conditionId": 4,
    "inputSource": 2,
    "rate": 500,
    "speed": 5,
    "targetChannel": 1,
  },
  {
    "conditionId": 4,
    "inputSource": 2,
    "rate": 500,
    "speed": 5,
    "targetChannel": 1,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavStatus 1`] = `
{
  "armingFlags": 250000,
  "cpuLoad": 42,
  "currentProfile": 2,
  "cycleTime": 1234,
  "i2cErrors": 5,
  "modeFlags": 10,
  "navAction": 2,
  "navState": 5,
  "sensors": 7,
}
`;

exports[`iNav decoder parity > decodeMspINavTempSensorConfig (two sensors) 1`] = `
[
  {
    "address": [
      170,
      187,
      204,
      221,
      238,
      17,
      34,
      51,
    ],
    "alarmMax": 900,
    "alarmMin": -100,
    "label": "BAT",
    "type": 1,
  },
  {
    "address": [
      1,
      170,
      187,
      204,
      221,
      238,
      17,
      34,
    ],
    "alarmMax": -31489,
    "alarmMin": -25549,
    "label": "BAT",
    "type": 0,
  },
]
`;

exports[`iNav decoder parity > decodeMspINavTemperatures 1`] = `
[
  250,
  -50,
  150,
  320,
  32767,
  -20,
  440,
  0,
]
`;

exports[`iNav decoder parity > decodeMspINavTimerOutputMode (three timers) 1`] = `
[
  {
    "mode": 1,
    "timerId": 0,
  },
  {
    "mode": 2,
    "timerId": 1,
  },
  {
    "mode": 3,
    "timerId": 2,
  },
]
`;

exports[`iNav decoder parity > decodeMspWp 1`] = `
{
  "action": 1,
  "altitude": 5000,
  "flag": 0,
  "lat": 12.756,
  "lon": 77.942,
  "number": 3,
  "p1": 500,
  "p2": 0,
  "p3": 0,
}
`;
